// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshot renders with teacher instructions, prompt and rationale even if not set 1`] = `
<ConfigLayout
  dimensions={Object {}}
  hideSettings={false}
  settings={
    <Panel
      configuration={
        Object {
          "baseInputConfiguration": Object {
            "audio": Object {
              "disabled": false,
            },
            "html": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": false,
            },
            "video": Object {
              "disabled": false,
            },
          },
          "editSource": Object {
            "enabled": false,
            "label": "Edit Source",
            "settings": false,
          },
          "language": Object {
            "enabled": false,
            "label": "Specify Language",
            "settings": false,
          },
          "languageChoices": Object {
            "label": "Language Choices",
            "options": Array [],
          },
          "mathMlOptions": Object {
            "mmlEditing": false,
            "mmlOutput": false,
          },
          "maxImageHeight": Object {
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxImageWidth": Object {
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxLengthPerChoice": Object {
            "label": "Maximum Length Per Choice",
            "settings": true,
          },
          "maxResponseAreas": 10,
          "partialScoring": Object {
            "label": "Allow Partial Scoring",
            "settings": false,
          },
          "playerSpellCheck": Object {
            "enabled": true,
            "label": "Student Spellcheck",
            "settings": true,
          },
          "prompt": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Prompt",
            "required": false,
            "settings": true,
          },
          "rationale": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Rationale",
            "required": false,
            "settings": true,
          },
          "responseAreaInputConfiguration": Object {
            "inputConfiguration": Object {
              "characters": Object {
                "disabled": true,
              },
            },
          },
          "settingsPanelDisabled": false,
          "spanishButton": Object {
            "label": "Disable Spanish Characters",
            "settings": true,
          },
          "spellCheck": Object {
            "enabled": true,
            "label": "Spellcheck",
            "settings": false,
          },
          "teacherInstructions": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Teacher Instructions",
            "required": false,
            "settings": true,
          },
          "template": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "blockquote": Object {
                "disabled": true,
              },
              "h3": Object {
                "disabled": true,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
          },
          "withRubric": Object {
            "label": "Add Rubric",
            "settings": false,
          },
        }
      }
      groups={
        Object {
          "Properties": Object {
            "editSource.enabled": false,
            "playerSpellCheckEnabled": undefined,
            "promptEnabled": undefined,
            "rationaleEnabled": undefined,
            "rubricEnabled": false,
            "spellCheckEnabled": false,
            "teacherInstructionsEnabled": undefined,
          },
          "Settings": Object {
            "language": false,
            "language.enabled": false,
            "maxLengthPerChoiceEnabled": undefined,
            "partialScoring": false,
            "responseAreaInputConfiguration.inputConfiguration.characters.disabled": undefined,
          },
        }
      }
      model={
        Object {
          "choices": Object {
            "0": Array [
              Object {
                "label": "cow",
                "value": "0",
              },
              Object {
                "label": "cattle",
                "value": "1",
              },
              Object {
                "label": "calf",
                "value": "2",
              },
            ],
            "1": Array [
              Object {
                "label": "over",
                "value": "0",
              },
              Object {
                "label": "past",
                "value": "1",
              },
              Object {
                "label": "beyond",
                "value": "2",
              },
            ],
            "2": Array [
              Object {
                "label": "moon",
                "value": "0",
              },
            ],
          },
          "disabled": false,
          "displayType": "block",
          "markup": "<p>The {{0}} jumped {{1}} the {{2}}</p>",
          "maxLengthPerChoice": Array [
            6,
            6,
            4,
          ],
          "maxLengthPerChoiceEnabled": true,
          "playerSpellCheckEnabled": true,
          "prompt": "Complete the sentence",
          "promptEnabled": true,
          "rationale": "",
          "rationaleEnabled": true,
          "responseAreaInputConfiguration": Object {},
          "slateMarkup": "<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>",
          "spellCheckEnabled": true,
          "studentInstructionsEnabled": true,
          "teacherInstructions": "",
          "teacherInstructionsEnabled": true,
          "toolbarEditorPosition": "bottom",
        }
      }
      onChangeConfiguration={[Function]}
      onChangeModel={[Function]}
    />
  }
>
  <InputContainer
    label="Teacher Instructions"
  >
    <EditableHtml
      allowValidation={false}
      autoWidthToolbar={true}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup=""
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={300}
      maxImageWidth={300}
      nonEmpty={false}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": false,
          },
          "html": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": false,
          },
          "video": Object {
            "disabled": false,
          },
        }
      }
      spellCheck={true}
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
  <InputContainer
    label="Prompt"
  >
    <EditableHtml
      allowValidation={false}
      autoWidthToolbar={true}
      disableUnderline={true}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup="Complete the sentence"
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={300}
      maxImageWidth={300}
      nonEmpty={false}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": false,
          },
          "html": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": false,
          },
          "video": Object {
            "disabled": false,
          },
        }
      }
      spellCheck={true}
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
  <div>
    <WithStyles(Typography)
      component="div"
    >
      Define Template, Choices, and Correct Responses
    </WithStyles(Typography)>
    <WithStyles(Tooltip)
      classes={
        Object {
          "tooltip": undefined,
        }
      }
      disableFocusListener={true}
      disableTouchListener={true}
      placement="right"
      title="Validation requirements:
Correct answers should not be blank.
Each answer defined for a response area should be unique.
There should be at least 1 and at most 10 response areas defined."
    >
      <pure(InfoIcon)
        color="primary"
        fontSize="small"
        style={
          Object {
            "marginLeft": "8px",
          }
        }
      />
    </WithStyles(Tooltip)>
  </div>
  <EditableHtml
    activePlugins={
      Array [
        "bold",
        "html",
        "extraCSSRules",
        "italic",
        "underline",
        "strikethrough",
        "bulleted-list",
        "numbered-list",
        "image",
        "math",
        "languageCharacters",
        "blockquote",
        "h3",
        "table",
        "video",
        "audio",
        "responseArea",
        "redo",
        "undo",
        "superscript",
        "subscript",
      ]
    }
    allowValidation={false}
    autoWidthToolbar={true}
    disableImageAlignmentButtons={true}
    disabled={false}
    highlightShape={false}
    languageCharactersProps={
      Array [
        Object {
          "language": "spanish",
        },
        Object {
          "language": "special",
        },
      ]
    }
    markup="<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>"
    mathMlOptions={
      Object {
        "mmlEditing": false,
        "mmlOutput": false,
      }
    }
    onChange={[Function]}
    onDone={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": false,
        },
        "blockquote": Object {
          "disabled": true,
        },
        "h3": Object {
          "disabled": true,
        },
        "html": Object {
          "disabled": true,
        },
        "image": Object {
          "disabled": false,
        },
        "video": Object {
          "disabled": false,
        },
      }
    }
    responseAreaProps={
      Object {
        "error": [Function],
        "maxResponseAreas": 10,
        "onHandleAreaChange": [Function],
        "options": Object {
          "duplicates": true,
        },
        "respAreaToolbar": [Function],
        "type": "explicit-constructed-response",
      }
    }
    spellCheck={true}
    toolbarOpts={
      Object {
        "position": "top",
      }
    }
  />
  <WithStyles(Typography)
    className=""
  >
    Define Alternates and Character Limits
  </WithStyles(Typography)>
  <AlternateResponses
    choicesErrors={Object {}}
    maxLengthPerChoiceEnabled={true}
    model={
      Object {
        "choices": Object {
          "0": Array [
            Object {
              "label": "cow",
              "value": "0",
            },
            Object {
              "label": "cattle",
              "value": "1",
            },
            Object {
              "label": "calf",
              "value": "2",
            },
          ],
          "1": Array [
            Object {
              "label": "over",
              "value": "0",
            },
            Object {
              "label": "past",
              "value": "1",
            },
            Object {
              "label": "beyond",
              "value": "2",
            },
          ],
          "2": Array [
            Object {
              "label": "moon",
              "value": "0",
            },
          ],
        },
        "disabled": false,
        "displayType": "block",
        "markup": "<p>The {{0}} jumped {{1}} the {{2}}</p>",
        "maxLengthPerChoice": Array [
          6,
          6,
          4,
        ],
        "maxLengthPerChoiceEnabled": true,
        "playerSpellCheckEnabled": true,
        "prompt": "Complete the sentence",
        "promptEnabled": true,
        "rationale": "",
        "rationaleEnabled": true,
        "responseAreaInputConfiguration": Object {},
        "slateMarkup": "<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>",
        "spellCheckEnabled": true,
        "studentInstructionsEnabled": true,
        "teacherInstructions": "",
        "teacherInstructionsEnabled": true,
        "toolbarEditorPosition": "bottom",
      }
    }
    onChange={[Function]}
    onLengthChange={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": false,
        },
        "characters": Object {
          "disabled": true,
        },
        "html": Object {
          "disabled": true,
        },
        "image": Object {
          "disabled": false,
        },
        "video": Object {
          "disabled": false,
        },
      }
    }
    spellCheck={true}
  />
  <InputContainer
    label="Rationale"
  >
    <EditableHtml
      allowValidation={false}
      autoWidthToolbar={true}
      languageCharactersProps={
        Array [
          Object {
            "language": "spanish",
          },
          Object {
            "language": "special",
          },
        ]
      }
      markup=""
      mathMlOptions={
        Object {
          "mmlEditing": false,
          "mmlOutput": false,
        }
      }
      maxImageHeight={300}
      maxImageWidth={300}
      onChange={[Function]}
      onDone={[Function]}
      pluginProps={
        Object {
          "audio": Object {
            "disabled": false,
          },
          "html": Object {
            "disabled": true,
          },
          "image": Object {
            "disabled": false,
          },
          "video": Object {
            "disabled": false,
          },
        }
      }
      spellCheck={true}
      toolbarOpts={
        Object {
          "position": "bottom",
        }
      }
    />
  </InputContainer>
</ConfigLayout>
`;

exports[`Main snapshot renders without teacher instructions, prompt and rationale 1`] = `
<ConfigLayout
  dimensions={Object {}}
  hideSettings={false}
  settings={
    <Panel
      configuration={
        Object {
          "baseInputConfiguration": Object {
            "audio": Object {
              "disabled": false,
            },
            "html": Object {
              "disabled": true,
            },
            "image": Object {
              "disabled": false,
            },
            "video": Object {
              "disabled": false,
            },
          },
          "editSource": Object {
            "enabled": false,
            "label": "Edit Source",
            "settings": false,
          },
          "language": Object {
            "enabled": false,
            "label": "Specify Language",
            "settings": false,
          },
          "languageChoices": Object {
            "label": "Language Choices",
            "options": Array [],
          },
          "mathMlOptions": Object {
            "mmlEditing": false,
            "mmlOutput": false,
          },
          "maxImageHeight": Object {
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxImageWidth": Object {
            "prompt": 300,
            "rationale": 300,
            "teacherInstructions": 300,
          },
          "maxLengthPerChoice": Object {
            "label": "Maximum Length Per Choice",
            "settings": true,
          },
          "maxResponseAreas": 10,
          "partialScoring": Object {
            "label": "Allow Partial Scoring",
            "settings": false,
          },
          "playerSpellCheck": Object {
            "enabled": true,
            "label": "Student Spellcheck",
            "settings": true,
          },
          "prompt": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Prompt",
            "required": false,
            "settings": true,
          },
          "rationale": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Rationale",
            "required": false,
            "settings": true,
          },
          "responseAreaInputConfiguration": Object {
            "inputConfiguration": Object {
              "characters": Object {
                "disabled": true,
              },
            },
          },
          "settingsPanelDisabled": false,
          "spanishButton": Object {
            "label": "Disable Spanish Characters",
            "settings": true,
          },
          "spellCheck": Object {
            "enabled": true,
            "label": "Spellcheck",
            "settings": false,
          },
          "teacherInstructions": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
            "label": "Teacher Instructions",
            "required": false,
            "settings": true,
          },
          "template": Object {
            "inputConfiguration": Object {
              "audio": Object {
                "disabled": false,
              },
              "blockquote": Object {
                "disabled": true,
              },
              "h3": Object {
                "disabled": true,
              },
              "image": Object {
                "disabled": false,
              },
              "video": Object {
                "disabled": false,
              },
            },
          },
          "withRubric": Object {
            "label": "Add Rubric",
            "settings": false,
          },
        }
      }
      groups={
        Object {
          "Properties": Object {
            "editSource.enabled": false,
            "playerSpellCheckEnabled": undefined,
            "promptEnabled": undefined,
            "rationaleEnabled": undefined,
            "rubricEnabled": false,
            "spellCheckEnabled": false,
            "teacherInstructionsEnabled": undefined,
          },
          "Settings": Object {
            "language": false,
            "language.enabled": false,
            "maxLengthPerChoiceEnabled": undefined,
            "partialScoring": false,
            "responseAreaInputConfiguration.inputConfiguration.characters.disabled": undefined,
          },
        }
      }
      model={
        Object {
          "choices": Object {
            "0": Array [
              Object {
                "label": "cow",
                "value": "0",
              },
              Object {
                "label": "cattle",
                "value": "1",
              },
              Object {
                "label": "calf",
                "value": "2",
              },
            ],
            "1": Array [
              Object {
                "label": "over",
                "value": "0",
              },
              Object {
                "label": "past",
                "value": "1",
              },
              Object {
                "label": "beyond",
                "value": "2",
              },
            ],
            "2": Array [
              Object {
                "label": "moon",
                "value": "0",
              },
            ],
          },
          "disabled": false,
          "displayType": "block",
          "markup": "<p>The {{0}} jumped {{1}} the {{2}}</p>",
          "maxLengthPerChoice": Array [
            6,
            6,
            4,
          ],
          "maxLengthPerChoiceEnabled": true,
          "playerSpellCheckEnabled": true,
          "prompt": "Complete the sentence",
          "promptEnabled": false,
          "rationale": "",
          "rationaleEnabled": false,
          "responseAreaInputConfiguration": Object {},
          "slateMarkup": "<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>",
          "spellCheckEnabled": true,
          "studentInstructionsEnabled": true,
          "teacherInstructions": "",
          "teacherInstructionsEnabled": false,
          "toolbarEditorPosition": "bottom",
        }
      }
      onChangeConfiguration={[Function]}
      onChangeModel={[Function]}
    />
  }
>
  <div>
    <WithStyles(Typography)
      component="div"
    >
      Define Template, Choices, and Correct Responses
    </WithStyles(Typography)>
    <WithStyles(Tooltip)
      classes={
        Object {
          "tooltip": undefined,
        }
      }
      disableFocusListener={true}
      disableTouchListener={true}
      placement="right"
      title="Validation requirements:
Correct answers should not be blank.
Each answer defined for a response area should be unique.
There should be at least 1 and at most 10 response areas defined."
    >
      <pure(InfoIcon)
        color="primary"
        fontSize="small"
        style={
          Object {
            "marginLeft": "8px",
          }
        }
      />
    </WithStyles(Tooltip)>
  </div>
  <EditableHtml
    activePlugins={
      Array [
        "bold",
        "html",
        "extraCSSRules",
        "italic",
        "underline",
        "strikethrough",
        "bulleted-list",
        "numbered-list",
        "image",
        "math",
        "languageCharacters",
        "blockquote",
        "h3",
        "table",
        "video",
        "audio",
        "responseArea",
        "redo",
        "undo",
        "superscript",
        "subscript",
      ]
    }
    allowValidation={false}
    autoWidthToolbar={true}
    disableImageAlignmentButtons={true}
    disabled={false}
    highlightShape={false}
    languageCharactersProps={
      Array [
        Object {
          "language": "spanish",
        },
        Object {
          "language": "special",
        },
      ]
    }
    markup="<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>"
    mathMlOptions={
      Object {
        "mmlEditing": false,
        "mmlOutput": false,
      }
    }
    onChange={[Function]}
    onDone={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": false,
        },
        "blockquote": Object {
          "disabled": true,
        },
        "h3": Object {
          "disabled": true,
        },
        "html": Object {
          "disabled": true,
        },
        "image": Object {
          "disabled": false,
        },
        "video": Object {
          "disabled": false,
        },
      }
    }
    responseAreaProps={
      Object {
        "error": [Function],
        "maxResponseAreas": 10,
        "onHandleAreaChange": [Function],
        "options": Object {
          "duplicates": true,
        },
        "respAreaToolbar": [Function],
        "type": "explicit-constructed-response",
      }
    }
    spellCheck={true}
    toolbarOpts={
      Object {
        "position": "top",
      }
    }
  />
  <WithStyles(Typography)
    className=""
  >
    Define Alternates and Character Limits
  </WithStyles(Typography)>
  <AlternateResponses
    choicesErrors={Object {}}
    maxLengthPerChoiceEnabled={true}
    model={
      Object {
        "choices": Object {
          "0": Array [
            Object {
              "label": "cow",
              "value": "0",
            },
            Object {
              "label": "cattle",
              "value": "1",
            },
            Object {
              "label": "calf",
              "value": "2",
            },
          ],
          "1": Array [
            Object {
              "label": "over",
              "value": "0",
            },
            Object {
              "label": "past",
              "value": "1",
            },
            Object {
              "label": "beyond",
              "value": "2",
            },
          ],
          "2": Array [
            Object {
              "label": "moon",
              "value": "0",
            },
          ],
        },
        "disabled": false,
        "displayType": "block",
        "markup": "<p>The {{0}} jumped {{1}} the {{2}}</p>",
        "maxLengthPerChoice": Array [
          6,
          6,
          4,
        ],
        "maxLengthPerChoiceEnabled": true,
        "playerSpellCheckEnabled": true,
        "prompt": "Complete the sentence",
        "promptEnabled": false,
        "rationale": "",
        "rationaleEnabled": false,
        "responseAreaInputConfiguration": Object {},
        "slateMarkup": "<p>The <span data-type=\\"explicit_constructed_response\\" data-index=\\"0\\" data-value=\\"cow\\"></span> jumped <span data-type=\\"explicit_constructed_response\\" data-index=\\"1\\" data-value=\\"over\\"></span> the <span data-type=\\"explicit_constructed_response\\" data-index=\\"2\\" data-value=\\"moon\\"></span></p>",
        "spellCheckEnabled": true,
        "studentInstructionsEnabled": true,
        "teacherInstructions": "",
        "teacherInstructionsEnabled": false,
        "toolbarEditorPosition": "bottom",
      }
    }
    onChange={[Function]}
    onLengthChange={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": false,
        },
        "characters": Object {
          "disabled": true,
        },
        "html": Object {
          "disabled": true,
        },
        "image": Object {
          "disabled": false,
        },
        "video": Object {
          "disabled": false,
        },
      }
    }
    spellCheck={true}
  />
</ConfigLayout>
`;
